--- a/index.html
+++ b/index.html
@@ -1,29 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Rafique Daruwalla Home</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">Resume</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<p>Just trying out GitHub Pages to build a personal website. So far so good :) </p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-            <li><a href="https://ca.linkedin.com/in/rafique-daruwalla-59bb2314">linkedin</a></li>
-        		<li><a href="mailto:sorryspammers@gmail.com">email</a></li>
-        		<li><a href="https://github.com/rafique-daruwalla">github</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Rafique Daruwalla Home
+---
+<div class="blurb">
+	<p>Just trying out GitHub Pages to build a personal website. So far so good :) </p>
+</div><!-- /.blurb -->
