--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Rafique Daruwalla Home
 ---
 <div class="blurb">
-	<p>Just trying out GitHub Pages to build a personal website. So far so good :) </p>
+	<p>Just trying out GitHub Pages and Jekyll to build a personal website. So far so good :) </p>
 </div><!-- /.blurb -->
