--- a/cv/index.html
+++ b/cv/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Resume
 ---
-	<p> Didn't really like the "404 Not Found" page, much so I'll just say "Coming Soon" for now. And "Soon" as in never. In the meanwhile,
-  just use LinkedIn link below to reach out, if you'd like.
-  </p>
+	<p> 
+		Didn't really like the "404 Not Found" page much, so I'll just say "Coming Soon" for now. And "Soon" as in will take a while. 
+		In the meanwhile, just use LinkedIn link below to reach out, if you'd like.
+  	</p>
