--- a/cv/index.html
+++ b/cv/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Resume
 ---
 	<p> 
-		Didn't really like the "404 Not Found" page much, so I'll just say "Coming Soon" for now. And "Soon" as in will take a while. 
+		Didn't really like the "404 Not Found" page much, so I'll just say "Coming Soon" for now. And "Soon" as in <em>will take a while</em>. 
 		In the meanwhile, just use LinkedIn link below to reach out, if you'd like.
   	</p>
