--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,7 @@ layout: default
 title: About
 ---
 	<p> 
-		As Schopenhauer once said, <em>"Life swings like a pendulum backward and forward between pain and boredom"</em>, 
+		As Schopenhauer once said, <em>"Life swings like a pendulum backward and forward between pain and boredom"</em>, <br>
+		<br>
 		perhaps once I figure out whether this site is the result of pain or boredom, I will add more details here. :-)
   </p>
